<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Donate Me!</string>
    <string name="hello_world">Hey Boss</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_donate">Welcome to the Donate Me App!\n\nWith this app you are able to see who is need of a donation based help around you. You also are able to direct donate money or getting into contact with the organization for other donations. \n \nIf you need help, you are welcome to request donations in the app. You can specify your organization, description, pictures, location, and donation request.</string>
    <string name="button1_label">Create an account to get started!</string>
    <string name="button2_label">Have an account? Sign in!</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="donate">Donate</string>
    <string name="random_act">Random Act of Kindness</string>
    <string name="random_amount">Radom Amount :</string>
    <string name="organization_name">Name of Organization</string>
    <string name="website">Website</string>
    <string name="how_to_help">How to Help</string>
    <string name="click_me">Click me to get started!</string>
    <string name="submit">Submit</string>
    <string name="exit">Exit</string>  
    <string name="non_monetary">The organization will give instructions for non monetary donation will be made. Perhaps through a phone number to call, a website address, or a brief description and address of a dropoff point.</string> 

</resources>
