<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2E8B57"
    android:gravity="left" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_donate"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <Button
        android:id="@+id/button2"
        style="@style/button_text"
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:text="@string/button2_label"
        android:background="@drawable/button_shape1"
       />

    <Button
        android:id="@+id/button1"
        style="@style/button_text"
        android:background="@drawable/button_shape"
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"        
        android:text="@string/button1_label" />

</RelativeLayout>
