<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_green" >

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/round_corners"
        android:text="@string/back"
        android:textSize="30sp" />

    <Button
        android:id="@+id/signupsubmit"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="19dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/round_corners1"
        android:text="@string/logout"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/usernametxtview"
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:layout_below="@+id/loginbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:text="@string/non_monetary"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:layout_marginRight="33dp"
        android:src="@drawable/map" />

</RelativeLayout>
